--- a/public/SaasFE/html/service-manage.html
+++ b/public/SaasFE/html/service-manage.html
@@ -26,14 +26,14 @@
                         <i class="layui-icon layui-nav-more">&#xe623;</i>
                         <p class="texts-wrapper">
                             <span class="texts">我的上线同事
-								<em>(
-									<i class="text-color-red">3</i>/4)</em>
-							</span>
+                                <em>(
+                                    <i class="text-color-red">3</i>/4)</em>
+                            </span>
                         </p>
                         <span class="handle">
-							<i class="s-i searchAdd add"></i>
-							<i class="layui-icon rename">&#xe642;</i>
-						</span>
+                            <i class="s-i searchAdd add"></i>
+                            <i class="layui-icon rename">&#xe642;</i>
+                        </span>
                     </h2>
                     <ul class="nav-child">
                         <li class="nav-item">
@@ -41,14 +41,14 @@
                                 <i class="layui-icon layui-nav-more">&#xe623;</i>
                                 <p class="texts-wrapper">
                                     <span class="texts">售前一组
-										<span>(
-											<em class="online">3</em>/4</span>
+                                        <span>(
+                                            <em class="online">3</em>/4</span>
                                     </span>
                                 </p>
                                 <span class="handle">
-									<i class="s-i searchAdd add"></i>
-									<i class="layui-icon rename">&#xe642;</i>
-								</span>
+                                    <i class="s-i searchAdd add"></i>
+                                    <i class="layui-icon rename">&#xe642;</i>
+                                </span>
                             </h2>
                         </li>
                         <li class="nav-item nav-item-active">
@@ -56,14 +56,14 @@
                                 <i class="layui-icon layui-nav-more">&#xe623;</i>
                                 <p class="texts-wrapper">
                                     <span class="texts">售前一组
-										<span>(
-											<em class="online">3</em>/4</span>
+                                        <span>(
+                                            <em class="online">3</em>/4</span>
                                     </span>
                                 </p>
                                 <span class="handle">
-									<i class="s-i searchAdd add"></i>
-									<i class="layui-icon rename">&#xe642;</i>
-								</span>
+                                    <i class="s-i searchAdd add"></i>
+                                    <i class="layui-icon rename">&#xe642;</i>
+                                </span>
                             </h2>
                         </li>
                     </ul>
@@ -77,20 +77,22 @@
                 <h2 class="title group-title-hook">{{d.name}}
                     <span>({{d.total}})</span>
                 </h2>
-                <form class="layui-form group-handle">
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">
-							<span class="s-i addGroup"></span>分组到：</label>
-                        <div class="layui-input-block">
-                            <select name="group" lay-verify="required" class="selGroupHook">
-								<option value="0">清选择</option>
-								{{# layui.each(d.group, function(index, item){ }}
-								<option value="{{index + 1}}">{{item}}</option>
-								{{# }); }}
-							</select>
+                <div class="add-group-handle">
+                    <span class="s-i addGroup"></span>
+                    <form class="layui-form group-handle">
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">分组到：</label>
+                            <div class="layui-input-block">
+                                <select name="group" lay-verify="required" class="selGroupHook">
+                                    <option value="0">清选择</option>
+                                    {{# layui.each(d.group, function(index, item){ }}
+                                    <option value="{{index + 1}}">{{item}}</option>
+                                    {{# }); }}
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
             <!-- 右侧表格区域 -->
             <div class="service-content-tab-wrapper" id="serviceContentTabHook">
@@ -111,7 +113,10 @@
             <thead>
                 <tr>
                     <th>
-                        <label><input type="checkbox" class="select-all-hook"><i class="s-i unChecked20 icon"></i></label>
+                        <label>
+                            <input type="checkbox" class="select-all-hook">
+                            <i class="s-i unChecked20 icon"></i>
+                        </label>
                     </th>
                     <th>工号账户</th>
                     <th>昵称</th>
@@ -127,20 +132,23 @@
                 {{# layui.each(d.users, function(index, item){ }}
                 <tr>
                     <td>
-                        <label><input class="mult-select-hook" type="checkbox"><i class="s-i unChecked20 icon"></i></label>
+                        <label>
+                            <input class="mult-select-hook" type="checkbox">
+                            <i class="s-i unChecked20 icon"></i>
+                        </label>
                     </td>
                     <td>{{item.uid}}</td>
                     <td>{{item.nickname}}</td>
                     <td>{{item.name}}</td>
                     <td>{{item.server}}</td>
                     <td>
-                        <span class="s-i {{item.online ? 'online' : 'offline'}}"></span>
+                        <span class="s-i {{item.online ? 'online' : 'offline'}} status-hook"></span>
                     </td>
                     <td>{{item.date}}</td>
                     <td>
-                        <button class=" layui-btn layui-btn-sm layui-btn-primary">编辑</button>
-                        <button class="layui-btn layui-btn-sm layui-btn-primary">禁用</button>
-                        <button class="layui-btn layui-btn-sm layui-btn-primary">删除</button>
+                        <button class="layui-btn layui-btn-sm layui-btn-primary edit-hook">编辑</button>
+                        <button class="layui-btn layui-btn-sm layui-btn-primary forbidden-hook">禁用</button>
+                        <button class="layui-btn layui-btn-sm layui-btn-primary del-hook">删除</button>
                     </td>
                 </tr>
                 {{# }); }}
@@ -150,21 +158,22 @@
     <script id="renderNavTpl" type="text/html">
         {{# layui.each(d.content, function(index, item){ }}
         <li class="nav-item {{d.root ? 'nav-item-root' : 'nav-item-sub'}}">
-            <div class="title" idmark="{{item.id}}" name="{{item.name}}" level="{{item.level || ''}}" usersize="{{item.users_size || 0}}" parentid="{{item.parentId || ''}}">
+            <div class="title" idmark="{{item.id}}" name="{{item.name}}" level="{{item.level || ''}}" usersize="{{item.users_size || 0}}"
+                parentid="{{item.parentId || ''}}">
                 {{# if(d.root){ }}
                 <i class="layui-icon layui-nav-more">&#xe623;</i> {{# } }}
                 <div class="deal-wrapper">
                     <div class="texts-wrapper layui-elip">
                         <span class="texts">
-							<i class="name-hook">{{item.name}}</i>
-							<em class="total-hook">({{item.total}})
-							</em>
-						</span>
+                            <i class="name-hook">{{item.name}}</i>
+                            <em class="total-hook">({{item.total}})
+                            </em>
+                        </span>
                     </div>
                     <span class="handle">
-						<i class="s-i pen rename"></i>
-						<i class="s-i searchAdd add"></i>
-					</span>
+                        <i class="s-i pen rename"></i>
+                        <i class="s-i searchAdd15 add"></i>
+                    </span>
                 </div>
                 <div class="rename-box">
                     <input class="layui-elip" idmark="{{item.id}}" type="text" value="{{item.name}}">
@@ -172,6 +181,78 @@
             </div>
         </li>
         {{# }); }}
+    </script>
+    <script id="popupTpl" type="text/html">
+        <div>
+            <form class="layui-form" lay-filter="popupFilter">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">登陆账号：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="account" lay-verify="required|account" autocomplete="off" class="layui-input account">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">登陆密码：</label>
+                    <div class="layui-input-block">
+                        <input type="password" name="password" lay-verify="required|password" autocomplete="off" class="layui-input password">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">姓名：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="name" lay-verify="required|name" autocomplete="off" class="layui-input name">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">昵称：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="nickname" lay-verify="nickname" autocomplete="off" class="layui-input nickname">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">角色：</label>
+                    <div class="layui-input-block">
+                        <select name="role" lay-verify="required" class="role">
+                            <option value=""></option>
+                            <option value="0">北京</option>
+                            <option value="1">上海</option>
+                            <option value="2">广州</option>
+                            <option value="3">深圳</option>
+                            <option value="4">杭州</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">接待上线人数：</label>
+                    <div class="layui-input-block layui-word-aux-right">
+                        <input type="text" name="number" lay-verify="required|number" autocomplete="off" class="layui-input people">
+                    </div>
+                    <div class="layui-form-mid layui-word-aux">不超过100人</div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">技能客户组：</label>
+                    <div class="layui-input-block customer">
+                        <input type="checkbox" name="1" lay-skin="primary" title="写作">
+                        <input type="checkbox" name="2" lay-skin="primary" title="阅读" checked>
+                        <input type="checkbox" name="3" lay-skin="primary" title="发呆">
+                        <input type="checkbox" name="4" lay-skin="primary" title="发呆">
+                        <input type="checkbox" name="5" lay-skin="primary" title="发呆">
+                        <input type="checkbox" name="6" lay-skin="primary" title="发呆">
+                        <input type="checkbox" name="7" lay-skin="primary" title="发呆">
+                        <input type="checkbox" name="8" lay-skin="primary" title="发呆">
+                        <input type="checkbox" name="9" lay-skin="primary" title="发呆">
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                </div>
+                <div class="layui-input-block btn-wrapper">
+                    <button class="layui-btn" lay-submit="" lay-filter="submitBtn">确定</button>
+                    <button type="reset" class="layui-btn layui-btn-primary cancelBtn">取消</button>
+                </div>
+            </form>
+        </div>
     </script>
     <script src="../lib/layui/layui.js"></script>
     <script src="../js/service-manage.js"></script>
@@ -184,6 +265,8 @@
 	id: 是否为唯一的
 	组名的长度限制，以及可输入的字符校验规则
 	上线下线是否可点击
-	禁用后上线下线标示是否变化
+    禁用后上线下线标示是否变化
+    
+    右侧删除，移动分组，新增，需要重新计算人数
 
  -->
